--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 td, th {
   vertical-align: middle !important;
   text-align: center !important;
+  horizontal-align: right !important;
 }
 
 .input-group {
